fixed bottom template overflow

--- a/PokeDex Clone/pokeAnalyzer.css
+++ b/PokeDex Clone/pokeAnalyzer.css
@@ -5,13 +5,13 @@ body{
 
 #displayBox{
     width: 600px;
-    height: 600px;
+    height: auto;
     background-color: red;
     border: 10px solid black;
     border-radius: 10px;
     margin: 0 auto;
     margin-top: 60px;
-    z-index: 0;
+
 }
 
 #displayInfo{
